# movement-zd

./: .gitignore  CMakeLists.txt  CMakePresets.json  best-copy.sh  cook  copygigabyte.sh  cpps.h  main.cpp  makefile  makesrs  manuals  openman.sh  p-ols.openma  retf.h  run  xfiles
.github/workflows/: c-cpp.yml
man/man6/: movement-zd.6
src/main/: cpps.h  main.cpp  retf.cpp
